fix: spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -70,7 +70,7 @@ canvas {
 
 #dialogue {
   position: fixed;
-  top: 12.5%;
+  top: 2.5em;
   left: 50%;
   transform: translate(-50%, 0);
   z-index: 10;
